fixed spacing

--- a/public/css/view.css
+++ b/public/css/view.css
@@ -204,7 +204,7 @@ body
 	background:#eeeeee;
 	margin:0 auto;
 	text-align:left;
-	width:1333px;
+	width:98%;
 }
 
 #top
